--- a/assests/style/style.css
+++ b/assests/style/style.css
@@ -2,5 +2,6 @@
 :root {
   --primary-color: #ff7b54;
   --secondary-color: #006fb2;
-  --thirdly-color: #212121;
+  --dark-color: #212121;
+  --white-color: #f5f5f5;
 }
