--- a/assests/style/style.css
+++ b/assests/style/style.css
@@ -1,11 +1,44 @@
-/* GLOBAL COLORS */
+/* GLOBAL COLORS AND FONDS */
 :root {
+  /* COLORS */
   --primary-color: #ff7b54;
   --secondary-color: #006fb2;
   --dark-color: #212121;
   --white-color: #f5f5f5;
+  /* FONTS */
+  --main-font: Poppins, sans-serif;
+  --secondary-font: 'Bebas Neue', sans-serif;
 }
 
-body {
-  font-family: 'Bebas Neue', Poppins, sans-serif;
+/* BOX-SIZING RESET */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+/* COMPONENTS FONT STYLE */
+h1,
+h2 {
+  font-family: var(--secondary-font);
+  letter-spacing: 1px;
+}
+
+h2,
+h3 {
+  color: var(--white-color);
+}
+
+h1 {
+  font-size: 6rem;
+  color: #fff;
+}
+
+h2 {
+  font-size: 50px;
+}
+
+h3 {
+  font-family: var(--main-font);
+  font-size: 32px;
 }
